force-app/main/default/objects/Matriz_Riesgo__c/Matriz_Riesgo__c.object-meta.xml
<CustomObject>
    <label>MatrizRiesgo</label>
    <nameField>
        <label>Nombre de Matriz_Riesgo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MatrizRiesgos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>