force-app/main/default/objects/Matriz_Riesgo__c/fields/Factor_Variables__c.field-meta.xml
<CustomField>
    <fullName>Factor_Variables__c</fullName>
    <label>Factor Variables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL</fullName>
                <label>Tipo de Cliente</label>
            </value>
            <value>
                <fullName>TP</fullName>
                <label>Tipo de Persona</label>
            </value>
            <value>
                <fullName>TD</fullName>
                <label>Tipo de Documento</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Fecha de Afiliación</label>
            </value>
            <value>
                <fullName>FN</fullName>
                <label>Fecha de Nacimiento</label>
            </value>
            <value>
                <fullName>FC</fullName>
                <label>Fecha de Constitución</label>
            </value>
            <value>
                <fullName>GE</fullName>
                <label>Giro de la Empresa</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Trabaja</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <label>Ocupación</label>
            </value>
            <value>
                <fullName>LE</fullName>
                <label>Lista de excepciones</label>
            </value>
            <value>
                <fullName>LP</fullName>
                <label>Lista PEPs</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>Producto</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Comercialización</label>
            </value>
            <value>
                <fullName>MU</fullName>
                <label>Municipalidad - Domicilio</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Nacionalidad</label>
            </value>
            <value>
                <fullName>UE</fullName>
                <label>Ubicación de la Empresa</label>
            </value>
            <value>
                <fullName>J</fullName>
                <isActive>false</isActive>
                <label>JURIDICO</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>NATURAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>