force-app/main/default/objects/Matriz_Riesgo__c/fields/Fecha_Afilia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Afilia__c</fullName>
    <label>Fecha Afilia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>DE 0 - 1 AÑO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>DE 1 - 3 AÑOS</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>DE 3 - 4 AÑOS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>DE 4 - &gt; AÑOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>