force-app/main/default/objects/Matriz_Riesgo__c/fields/Fecha_Constitucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Constitucion__c</fullName>
    <label>Fecha Constitución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Constituidos antes de 1970</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Constituidos entre 1970 -1990</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Constituidos entre 1980 - 1995</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Constituidos después de 1995</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>