force-app/main/default/objects/Matriz_Riesgo__c/fields/Fecha_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Nacimiento__c</fullName>
    <label>Fecha Nacimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Antes 1970</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>1970 - 1990</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>1980 - 1995</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Mayor 1995</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>