force-app/main/default/objects/Matriz_Riesgo__c/fields/Medida__c.field-meta.xml
<CustomField>
    <fullName>Medida__c</fullName>
    <label>Medida</label>
    <length>20</length>
    <type>Text</type>
</CustomField>