force-app/main/default/objects/Matriz_Riesgo__c/fields/NivelRiesgo__c.field-meta.xml
<CustomField>
    <fullName>NivelRiesgo__c</fullName>
    <label>NivelRiesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ALTO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MEDIO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>MODERADO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BAJO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>