force-app/main/default/objects/Matriz_Riesgo__c/fields/Riesgo_Exc__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_Exc__c</fullName>
    <label>Riesgo Exc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>SI</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>