force-app/main/default/objects/Matriz_Riesgo__c/fields/Riesgo_ProdJur__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_ProdJur__c</fullName>
    <label>Riesgo ProdJur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>FONDO INDIVIDUAL O CESANTÍA EMPRESARIAL EN LEMPIRAS</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>FONDO INDIVIDUAL O CESANTÍA EMPRESARIAL EN DÓLARES</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>PENSIONES CONTRIBUTIVO</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>PENSIONES NO CONTRIBUTIVO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>