force-app/main/default/objects/Matriz_Riesgo__c/fields/Riesgo_ProductoNat__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_ProductoNat__c</fullName>
    <label>Riesgo ProdNat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>PENSION INDIVIDUAL</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CONTRIBUTIVO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>NO CONTRIBUTIVO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>CESANTÍA INDIVIDUAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>