force-app/main/default/objects/Matriz_Riesgo__c/fields/Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cliente__c</fullName>
    <label>Tipo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>INDIVIDUAL</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>CONTRIBUTIVO</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NO CONTRIBUTIVO</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>CESANTÍA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>