force-app/main/default/objects/Matriz_Riesgo__c/fields/Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Documento__c</fullName>
    <label>Tipo Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cedula de Identidad</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Carnet de Residente</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pasaporte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>