force-app/main/default/objects/Matriz_Riesgo__c/fields/Tipo_Persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Persona__c</fullName>
    <label>Tipo Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>INDIVIDUAL-MENOR DE EDAD</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>INDIVIDUAL-NACIONAL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>INDIVIDUAL-EXTRANJERO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>JURIDICO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>